# path-select-social-nav

./: .gitignore  README.md
path_select/: CMakeLists.txt  package.xml  setup.py  visual_social.rviz
path_select/config/: params.yaml
path_select/launch/: human_perception.launch  path_select_navigate.launch
path_select/msg/: AgentStates.msg  CostMap.msg
path_select/nodes/: conda_run_controller.sh  conda_run_human_env.sh  conda_run_planning.sh  conda_run_sequencer.sh  controller_node.py  human_env_info_node.py  path_planning_node.py  sequencer.py
path_select/nodes/function_modules/: adapt_orca.py  costmap_generate.py  dwa_recover.py  human_detect_track.py  human_predict.py  path_generate_select.py  utils.py
path_select/nodes/function_modules/adapt_rvo/: setup.py
path_select/nodes/function_modules/adapt_rvo/src/: Agent.cpp  adapt_rvo2.cpp  rvo2.cpp
path_select/nodes/function_modules/byte_track/tracker/: byte_tracker.py
path_select/nodes/function_modules/nmrf_predict/: config.yaml  layers.py  model_mrf_stride_sample.py
path_select/nodes/interfaces/: controller_interface.py  human_env_info_interface.py  path_planning_interface.py
path_select/nodes/sensor_infos/: camera.py  lidar.py  odom.py
path_select/nodes/sensor_infos/ros_numpy/: point_cloud2.py
path_select/srv/: ControlService.srv  PlanningService.srv
vlm_train_inference/: inference.sh  training.sh
vlm_train_inference/training/: finetune_qwenvl25.py
