<?xml version="1.0"?>
<package format="2">

  <name>path_select</name>
  <version>1.0.0</version>
  <description>Package for path selection, containing custom messages, services, nodes, and utility modules.</description>
  <maintainer email="ghost@gmail.com">Ghost</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>

